src/objects/WishGrantedSubCaseTaskList__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to hold list of task for Wis Granted Sub Cases</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used to hold the description for the task</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Holds due date for task</description>
        <label>Due Date</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <description>Holds the subject for tasks</description>
        <label>Task Subject</label>
        <type>TextArea</type>
    </fields>
    <label>WishGrantedSubCaseTaskList</label>
</CustomObject>